<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="16dp"
        android:text="@string/accelerometer_app"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperaturetextView"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:text="@string/temp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/maroon"
        android:textColorHint="@android:color/black"
        android:textColorLink="@color/maroon"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/activitytextView"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity"
        android:textColor="@color/white"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humiditytextView" />

    <TextView
        android:id="@+id/humiditytextView"
        android:layout_width="108dp"
        android:layout_height="43dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="10dp"
        android:text="@string/humidity"
        android:textColor="@color/white"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperaturetextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="85dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/sensorReadings"
        android:text="@string/sensor_reading"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitytextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/sensorReadings"
        android:text="@string/output"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_button" />

    <TextView
        android:id="@+id/logReport"
        android:layout_width="295dp"
        android:layout_height="150dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        android:background="@color/gray"
        android:textColor="@color/black"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />



    <Button
        android:id="@+id/generate_button"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_green_dark"
        android:labelFor="@+id/logReport"
        android:onClick="generateRandomNum"
        android:text="@string/generate"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/holo_red_light"
        android:onClick="cancelTask"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/generate_button"
        app:layout_constraintTop_toBottomOf="@+id/sensorReadings" />



    <TextView
        android:id="@+id/activityValueText"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:background="@android:drawable/alert_light_frame"
        android:paddingBottom="@dimen/text_margin_width_minor"
        android:paddingEnd="@dimen/text_display_width_minor"
        android:paddingStart="@dimen/text_display_width_minor"
        android:text="@string/activity_value"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/activitytextView"
        app:layout_constraintTop_toBottomOf="@+id/humidityValueText" />

    <TextView
        android:id="@+id/humidityValueText"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:background="@android:drawable/alert_light_frame"
        android:paddingBottom="@dimen/text_margin_width_minor"
        android:paddingEnd="@dimen/text_display_width_minor"
        android:paddingStart="@dimen/text_display_width_minor"
        android:text="@string/humidity_value"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/humiditytextView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureValueText" />

    <TextView
        android:id="@+id/temperatureValueText"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:background="@android:drawable/alert_light_frame"
        android:paddingBottom="@dimen/text_margin_width_minor"
        android:paddingEnd="@dimen/text_display_width_minor"
        android:paddingStart="@dimen/text_display_width_minor"
        android:text="@string/temp_value"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/temperaturetextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />



    <EditText
        android:id="@+id/sensorReadings"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="22dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:paddingStart="@dimen/text_display_width_minor"
        android:paddingEnd="@dimen/text_margin_width_minor"
        android:scrollbars="none"
        android:text="@string/sensor_value"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/activityValueText" />
</android.support.constraint.ConstraintLayout>